set CSRF_TRUSTED_ORIGIN to the exact URL in dev/preprod

--- a/infrastructure/environments/dev/variables.yml
+++ b/infrastructure/environments/dev/variables.yml
@@ -2,4 +2,4 @@ BASE_URL: https://dev.manage-breast-screening.non-live.screening.nhs.uk
 BASIC_AUTH_ENABLED: True
 CIS2_SERVER_METADATA_URL: https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk/openam/oauth2/realms/root/realms/NHSIdentity/realms/Healthcare/.well-known/openid-configuration
 PERSONAS_ENABLED: 1
-CSRF_TRUSTED_ORIGINS: 'https://*.manage-breast-screening.non-live.screening.nhs.uk'
+CSRF_TRUSTED_ORIGINS: 'https://dev.manage-breast-screening.non-live.screening.nhs.uk'
